# cpp_cython_bazel_example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
bazel/: BUILD.spdlog  cython_library.bzl  define.bzl  deps_build_all.bzl  deps_setup.bzl  project.bzl  python_deps.bzl
bazel/cy/: cython_library.bzl
bazel/py/: python_configure.bzl
cpp/src/: my_lib.cpp
python/my_package/: _my_package.pxd  _my_package.pyx
python/xoscar/: _xoscar.pyx
